Movie commit